# haskell-dither

./: CHANGELOG.md  LICENSE  README.md  default.nix  dither.hs  haskell-dither.cabal  main.hs
app/: Dither.hs  Main.hs  Strategy.hs  strategy.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
