cabal-version:      2.4

name:               haskell-dither

version:            0.1.0.0
synopsis:           A command line application to dither images
homepage:
license:            MIT
license-file:       LICENSE
author:             Ben Caldwell
maintainer:         caldwellb@uchicago.edu
extra-source-files:
    CHANGELOG.md
    README.md
executable dither
    main-is:          Main.hs
    other-modules: Dither, Strategy
    build-depends:    base ^>=4.15.0.0,
                      filepath ^>=1.4.2.1,
                      random ^>=1.2.1,
                      hip ^>=1.5.6.0,
                      primitive ^>=0.7.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
